<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.tvshows.detail.TvShowDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_detail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/tvVoteCountTvShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTitleTv"
            tools:ignore="ContentDescription"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tvTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_movie_detail"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="ini nama filmnya" />

        <TextView
            android:id="@+id/tvPopularityTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvTitleTv"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleTv"
            tools:text="popularity" />

        <TextView
            android:id="@+id/tvDateTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvPopularityTvShow"
            app:layout_constraintTop_toBottomOf="@+id/tvPopularityTvShow"
            tools:text="release date" />

        <TextView
            android:id="@+id/tvVoteAverageTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvDateTvShow"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTvShow"
            tools:text="vote average" />

        <TextView
            android:id="@+id/tvVoteCountTvShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/tvVoteAverageTvShow"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteAverageTvShow"
            tools:text="vote count" />

        <TextView
            android:id="@+id/tvOverViewTvShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVoteCountTvShow"
            tools:text="overview" />

        <com.example.submission.view.shimmerview.ShimmerView
            android:id="@+id/shimmerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>